--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "index.js",
   "repository": "git@github.com:StephenGrider/ReduxSimpleStarter.git",
   "scripts": {
-    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "dev": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "start": "node server.js",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
-    "test:watch": "npm run test -- --watch"
-  },
+    "test:watch": "npm run test -- --watch",
+    "postinstall": "webpack -p"
+},
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -27,6 +29,7 @@
   },
   "dependencies": {
     "babel-preset-stage-1": "^6.1.18",
+    "express": "^4.16.3",
     "lodash": "^3.10.1",
     "nodemon": "^1.17.1",
     "react": "^0.14.3",
